// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManufacturerForm component - snapshots sets submit button label 'Save' when saving is false 1`] = `
<div
  className="row content"
>
  <div
    className="col-12"
  >
    <h2>
      Edit
       Manufacturer
    </h2>
    <p>
      * using react-hook-form
    </p>
  </div>
  <div
    className="col-12 col-md-4"
  >
    <form
      autoComplete="off"
      onSubmit={[Function]}
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="name"
        >
          Manufacturer name:
        </label>
        <input
          className="form-control"
          id="name"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
      </div>
      <button
        className="btn btn-primary"
        type="submit"
      >
        Save
      </button>
    </form>
  </div>
</div>
`;

exports[`ManufacturerForm component - snapshots sets submit button label 'Saving...' when saving is true 1`] = `
<div
  className="row content"
>
  <div
    className="col-12"
  >
    <h2>
      Edit
       Manufacturer
    </h2>
    <p>
      * using react-hook-form
    </p>
  </div>
  <div
    className="col-12 col-md-4"
  >
    <form
      autoComplete="off"
      onSubmit={[Function]}
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="name"
        >
          Manufacturer name:
        </label>
        <input
          className="form-control"
          id="name"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
      </div>
      <button
        className="btn btn-primary"
        type="submit"
      >
        Saving
      </button>
    </form>
  </div>
</div>
`;
